--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "JATE",
+  "name": "pwa-text-editor",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start:dev": "",
+    "dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
     "start": "",
     "server": "",
     "build": "",
-    "install": "",
+    "install": "cd server && npm i && cd ../client && npm i",
     "client": ""
   },
   "keywords": [],
