fixed service worker and completed database.js

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "server.js",
   "scripts": {
     "dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
-    "start": "",
+    "start": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
     "server": "",
-    "build": "",
+    "build": " cd client && npm run build",
     "install": "cd server && npm i && cd ../client && npm i",
     "client": ""
   },
